--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -577,7 +577,6 @@
     <Compile Include="Instructions\Movups.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="Instructions\MovStore.cs" />
     <Compile Include="Instructions\IMul.cs">
       <DependentUpon>X86Instructions.tt</DependentUpon>
     </Compile>
@@ -644,6 +643,9 @@
     <Compile Include="Intrinsic\Pause.cs" />
     <Compile Include="Intrinsic\LockSet.cs" />
     <Compile Include="Intrinsic\Remainder.cs" />
+    <Compile Include="Intrinsic\Set32.cs" />
+    <Compile Include="Intrinsic\Set16.cs" />
+    <Compile Include="Intrinsic\Set8.cs" />
     <Compile Include="Intrinsic\SetFS.cs" />
     <Compile Include="Intrinsic\SyncCompareAndSwap.cs" />
     <Compile Include="Stages\ConstantLoweringStage.cs" />
@@ -691,7 +693,6 @@
     <Compile Include="Intrinsic\SetCR4.cs" />
     <Compile Include="Intrinsic\Get8.cs" />
     <Compile Include="Intrinsic\Hlt.cs" />
-    <Compile Include="Intrinsic\Set.cs" />
     <Compile Include="Intrinsic\CpuIdEax.cs" />
     <Compile Include="Intrinsic\CpuIdEbx.cs" />
     <Compile Include="Intrinsic\CpuIdEcx.cs" />
