--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -201,22 +201,34 @@
     <Compile Include="IR\CompareIntegerBranch.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionFloatR4ToFloatR8.cs">
+    <Compile Include="IR\ConvertFloatR4ToFloatR8.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionFloatR4ToInteger.cs">
+    <Compile Include="IR\ConvertFloatR4ToInteger32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionFloatR8ToFloatR4.cs">
+    <Compile Include="IR\ConvertFloatR4ToInteger64.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionFloatR8ToInteger.cs">
+    <Compile Include="IR\ConvertFloatR8ToFloatR4.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionIntegerToFloatR4.cs">
+    <Compile Include="IR\ConvertFloatR8ToInteger32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\ConversionIntegerToFloatR8.cs">
+    <Compile Include="IR\ConvertFloatR8ToInteger64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ConvertInteger32ToFloatR4.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ConvertInteger32ToFloatR8.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ConvertInteger64ToFloatR4.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ConvertInteger64ToFloatR8.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\DivFloatR4.cs">
@@ -321,9 +333,6 @@
     <Compile Include="IR\LoadFloatR8.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\LoadInteger.cs">
-      <DependentUpon>IRInstructions.tt</DependentUpon>
-    </Compile>
     <Compile Include="IR\LoadInteger32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
@@ -375,7 +384,7 @@
     <Compile Include="IR\LoadParameterZeroExtended8x64.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\LoadSignExtended.cs">
+    <Compile Include="IR\LoadSignExtended16x32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\LoadSignExtended16x64.cs">
@@ -388,9 +397,6 @@
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\LoadSignExtended8x64.cs">
-      <DependentUpon>IRInstructions.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IR\LoadZeroExtended.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\LoadZeroExtended16x32.cs">
@@ -447,19 +453,10 @@
     <Compile Include="IR\MoveFloatR8.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
-    <Compile Include="IR\MoveInteger.cs">
-      <DependentUpon>IRInstructions.tt</DependentUpon>
-    </Compile>
     <Compile Include="IR\MoveInteger32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\MoveInteger64.cs">
-      <DependentUpon>IRInstructions.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IR\MoveSignExtended.cs">
-      <DependentUpon>IRInstructions.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IR\MoveZeroExtended.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
     <Compile Include="IR\MulFloatR4.cs">
@@ -549,6 +546,21 @@
     <Compile Include="IR\ShiftRight64.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="IR\SignExtended16x32.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\SignExtended16x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\SignExtended32x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\SignExtended8x32.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\SignExtended8x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="IR\Split64.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
@@ -624,6 +636,9 @@
     <Compile Include="IR\To64.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="IR\Truncation64x32.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="IR\TryEnd.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
@@ -642,6 +657,21 @@
     <Compile Include="IR\UnstableObjectTracking.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
+    <Compile Include="IR\ZeroExtended16x32.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ZeroExtended16x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ZeroExtended32x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ZeroExtended8x32.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IR\ZeroExtended8x64.cs">
+      <DependentUpon>IRInstructions.tt</DependentUpon>
+    </Compile>
     <Compile Include="LoadStore.cs" />
     <Compile Include="Intrinsics\Load16.cs" />
     <Compile Include="Intrinsics\Store64.cs" />
@@ -651,7 +681,6 @@
     <Compile Include="Intrinsics\Load8.cs" />
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
-    <Compile Include="MethodTransform.cs" />
     <Compile Include="MosaCompiler.cs" />
     <Compile Include="InstructionSize.cs" />
     <Compile Include="Intrinsics\GetObjectAddress.cs" />
