--- a/Source/Mosa.Tool.Launcher/packages.config
+++ b/Source/Mosa.Tool.Launcher/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.2.1" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
