--- a/Source/Mosa.Tool.Compiler/Mosa.Tool.Compiler.nuspec
+++ b/Source/Mosa.Tool.Compiler/Mosa.Tool.Compiler.nuspec
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package >
 	<metadata>
 		<id>Mosa.Tool.Compiler</id>
@@ -22,6 +22,5 @@
 		<file src="..\..\bin\mosacl.exe" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
-		<file src="..\..\bin\Mosa.Utility.Aot.dll" target="tools" />
 	</files>
 </package>
