--- a/Source/Mosa.Utility.BootImage/Mosa.Utility.BootImage.csproj
+++ b/Source/Mosa.Utility.BootImage/Mosa.Utility.BootImage.csproj
@@ -47,7 +47,7 @@
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BlockFileStream.cs" />
+    <Compile Include="BlockFileStreamDriver.cs" />
     <Compile Include="BootFormat.cs" />
     <Compile Include="BootLoader.cs" />
     <Compile Include="BootImageOptions.cs" />
