--- a/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
+++ b/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
@@ -81,6 +81,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="X86System.cs" />
+    <Compile Include="ISA\ISABus.cs" />
     <Compile Include="ISA\CMOS.cs" />
     <Compile Include="ISA\IDEController.cs" />
     <Compile Include="ISA\PCIController.cs" />
