--- a/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
+++ b/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
@@ -69,6 +69,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiskDeviceMountDeamon.cs" />
+    <Compile Include="BaseMountDaemon.cs" />
     <Compile Include="Color.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -79,7 +81,6 @@
     <Compile Include="DataBlock.cs" />
     <Compile Include="DeviceBusType.cs" />
     <Compile Include="DeviceDriverPhysicalMemory.cs" />
-    <Compile Include="DeviceDriverRegistry.cs" />
     <Compile Include="DeviceDriverStartStatus.cs" />
     <Compile Include="DeviceManager.cs" />
     <Compile Include="DeviceStatus.cs" />
@@ -97,8 +98,6 @@
     <Compile Include="IHardwareDevice.cs" />
     <Compile Include="IIOPorts.cs" />
     <Compile Include="BaseMemory.cs" />
-    <Compile Include="InterruptHandler.cs" />
-    <Compile Include="InterruptManager.cs" />
     <Compile Include="IOPortRegion.cs" />
     <Compile Include="IOPortResources.cs" />
     <Compile Include="IPCIController.cs" />
